--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
+    "store": "^2.0.12",
     "vue": "^3.2.41"
   },
   "devDependencies": {
